--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 NEXT_PUBLIC_SQUIDEX_API_URL=https://cloud.squidex.io/api/content/signetblog/posts
 NEXT_PUBLIC_SQUIDEX_CLIENT_ID=63d4086c7940e65f60d140d1
 NEXT_PUBLIC_SQUIDEX_CLIENT_SECRET=pa43gh2142qxtn3i9lay6idpe0n4zdqifkhzrdtl08mx
-NEXT_PUBLIC_CONTACT_API_URL=https://api.eazynft.co/api/v1/general/email/contact
+NEXT_PUBLIC_API_URL=https://api.eazynft.co/api/v1/
+# NEXT_PUBLIC_API_URL=http://localhost:3001/api/v1/
