--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next/font": "13.1.5",
     "next": "13.1.5",
     "next-sitemap": "^3.1.54",
+    "qrcode": "^1.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.4.1",
