--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "qrcode": "^1.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-image-magnify": "^2.7.4",
     "react-intersection-observer": "^9.4.1",
+    "react-multi-carousel": "^2.8.3",
     "react-owl-carousel": "^2.3.3"
   }
 }
