--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "react-magnify-image": "^2.7.4",
     "react-multi-carousel": "^2.8.3",
     "react-owl-carousel": "^2.3.3"
+  },
+  "devDependencies": {
+    "css-minimizer-webpack-plugin": "^5.0.0",
+    "terser-webpack-plugin": "^5.3.8"
   }
 }
