--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@next/font": "13.1.5",
     "next": "13.1.5",
+    "next-recaptcha-v3": "^1.2.0",
     "next-sitemap": "^3.1.54",
     "qrcode": "^1.5.1",
     "react": "18.2.0",
